--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -364,7 +364,70 @@ header img{
 }
 
 /*===========Actividades===============*/
+.activities{
+    display: block;
+    margin-top: 15vh;
+}
+figure {
+    --c: 50px;
+    --p: 30px;
+    --d: 10px;
+    background: red;
+    display: inline-block;
+    padding: var(--p);
+    background:
+      radial-gradient(farthest-side at 0 0, #000, #0000) 0 0 / var(--c) var(--c),
+      radial-gradient(farthest-side at 100% 100%, #000, #0000) 100% 100% / var(--c) var(--c),
+      linear-gradient(#fff 0 0) 50% 50% / calc(100% - var(--p)) calc(100% - var(--p)),
+      linear-gradient(#0000, #000 25% 75%, #0000) 50% 50% / calc(100% - var(--p)) calc(100% - var(--d)),
+      linear-gradient(90deg, #0000, #000 25% 75%, #0000) 50% 50% / calc(100% - var(--d)) calc(100% - var(--p)),
+      radial-gradient(farthest-side at 0 100%, #00000018, #0000) calc(100% - var(--d) * 0.5) calc(var(--d) * 0.5) / var(--d) var(--d),
+      radial-gradient(farthest-side at 100% 0, #00000018, #0000) calc(var(--d) * 0.5) calc(100% - var(--d) * 0.5) / var(--d) var(--d)
+      ;
+    background-repeat: no-repeat;
+    clip-path: polygon(0 var(--c), var(--c) 0, 100% 0, 100% calc(100% - var(--c)), calc(100% - var(--c)) 100%, 0 100%);
+  }
+  
+  .article_1 img {
+    width: 300px;
+    height: 300px;
 
+  }
+  
+  .article_2 img {
+    width: 300px;
+    height: 300px;
+  }
+  
+  .article_3 img {
+    width: 300px;
+    aspect-ratio: 1;
+  }
+  .article_4 img {
+    width: 300px;
+    height: 300px;
+
+  }
+  
+  .article_5 img {
+    width: 300px;
+    height: 500px;
+
+  }
+  
+  .article_6 img {
+    width: 300px;
+    aspect-ratio: 1;
+  }
+  .article_7 img {
+    width: 300px;
+    height: 550px;
+  }
+  
+  figure img {
+    object-fit: cover;
+  }
+  
 /*===========Ubicacion===============*/
 
 /*===========Contacto===============*/
