--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
-
+  @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@800&display=swap');
 
 /* 1. Use a more-intuitive box-sizing model. */
 *, *::before, *::after {
@@ -57,7 +56,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 header{
     position: fixed;
-    z-index: 10;
+    z-index: 20;
     display: flex;
     justify-content: space-between; 
     align-items: center;
@@ -77,12 +76,12 @@ header img{
 }
 .menu {
     color: #ffffff;
-    font-family: "chelsea market", sans-serif;
+    font-family: 'Playpen Sans', cursive;
     font-size: 20px;
     display: flex;
     justify-content: flex-end; 
     list-style-type: none;
-    text-shadow: 0.2vh 0.2vh rgb(95, 95, 95);
+    text-shadow: 0.15vh 0.15vh rgb(95, 95, 95);
     margin-right: 1vw;
   }
  
@@ -95,7 +94,6 @@ header img{
 
 .menu li:hover{
     color: var(--color-heading);
-    text-shadow: 0.27vh 0.27vh rgb(82, 81, 81);
     transition: 0.6s;
 }
 /*===========Vista Principal===============*/
@@ -234,6 +232,7 @@ header img{
     display: flex;
     flex-direction: column;
     z-index: 20;
+    
 }
 
 .info .title{
@@ -262,31 +261,38 @@ header img{
 }
 
 .info p{
-    font-family: "chelsea market", sans-serif;
-    color: rgba(148, 231, 233, 0.8);
+    font-family: 'Playpen Sans', cursive;    
+    color:#ffffff;
     text-shadow: 0.2vh 0.2vh rgb(77, 76, 76);
     font-size: 3vw;
     align-self: center;
 }
+ .info a{ 
+    font-family: 'Playpen Sans', cursive;   
+    align-self: center;
+    text-decoration: none;
+    font-size: 1.5vw;
+    background:rgb(148, 232, 233);
+    box-shadow: 0.5vh 0.5vh rgba(77, 76, 76, 0.877);
+    margin-top: 2vh;
+    padding: 1vh;
+    color: inherit;
+ }
 
+ .info a:hover{ 
+    background:rgb(182, 249, 252);
+    box-shadow: 0.7vh 0.7vh rgb(59, 59, 59);
+    transition: 0.5s;
+ }
 
 /*===========Galeria===============*/
-
-.Logo{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 200px;
-    margin-top: 35px;
-}
-
 
 .Galery{
     /*background-color: rgb(215, 250, 248);*/
     position: relative;
     width: 100%;
     height: auto;
-    margin-top: 35px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
 }
