--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -303,7 +303,7 @@ header img{
     height: 10vh;
     z-index: 0;
     top:40%;
-    transform: skewY(-10deg);
+    transform: skewY(10deg);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     filter:  drop-shadow(0px 20px 10px rgba(0, 0, 0, 0.3));    
 }
@@ -380,16 +380,23 @@ header img{
     height:auto;
     font-family: 'Playpen Sans', cursive;   
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 8vh repeat(4, 40vh) ;
+    grid-template-rows: 8vh repeat(4, 55vh) ;
     grid-template-areas:
-    "title title title . . "
+    "title title . . . "
     ". img1 img1 info1 info1  "
     "img2 img2 info2 info2 .  "
     ". img3 img3 info3 info3 "
     "img4 img4 info4 info4 . ";
     place-items: center;
-    row-gap: 6vh;;
+    row-gap: 5vh;
 }
+.activities article{
+  justify-self: left;
+}
+.activities :first-child{
+  justify-self: center;
+}
+
 figure {
     --c: 50px;
     --p: 30px;
@@ -409,7 +416,7 @@ figure {
     clip-path: polygon(0 var(--c), var(--c) 0, 100% 0, 100% calc(100% - var(--c)), calc(100% - var(--c)) 100%, 0 100%);
   }
   .activities img{
-    width: 300px;
+    width: 350px;
     aspect-ratio: 1;
   }
   figure img {
