--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -454,15 +454,40 @@ figure {
 
   
 /*===========Ubicacion===============*/
-
+.location{
+  display: flex;
+  justify-content: flex-end;
+}
 /*===========Contacto===============*/
 
-footer{
-    background: #e4b8e2;
-    width: 2100%;
-    height: 20vh;
-}
 
+footer{
+    display: flex;
+    justify-content: space-between;    
+    background: #e4b8e2;
+    color: #ffffff;
+    width: 100%;
+    height: 20vh;
+    padding: 3vh;
+}
+footer a{
+  color: inherit;
+  text-decoration: none;
+  font-size: 2.5vh;
+  display: flex;
+  align-items: center;
+
+}
+footer :last-child{
+  width: 20vh;
+  height: auto;
+}
+.WhatsApp svg{
+  margin: 10px;
+  width: 20px;
+  height: auto;
+  display: inline;
+  }
 
   @media screen and (max-width: 992px) {
     body {
