--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
-
+html {
+    scroll-behavior: smooth;
+  }
 /* 1. Use a more-intuitive box-sizing model. */
 *, *::before, *::after {
     box-sizing: border-box;
@@ -468,7 +470,7 @@ figure {
 
 
 footer{
-    display: flex;
+    display: block;
     justify-content: space-between;    
     background: #e4b8e2;
     color: #ffffff;
@@ -477,12 +479,12 @@ footer{
     padding: 3vh;
 }
 footer a{
-  color: inherit;
-  text-decoration: none;
-  font-size: 2.5vh;
-  display: flex;
-  align-items: center;
-
+     color: inherit;
+     text-decoration: none;
+     font-size: 2vh;
+     display: flex;
+     align-items: center;
+     width: 40%;
 }
 
 .WhatsApp svg{
@@ -491,7 +493,6 @@ footer a{
   height: auto;
   display: inline;
   }
-
   @media screen and (max-width: 990px) {
     body {
         .HeroSection .background{
