--- a/Cositas/style.css
+++ b/Cositas/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
 html {
     scroll-behavior: smooth;
+    scroll-padding: 100px;
+  
   }
 /* 1. Use a more-intuitive box-sizing model. */
 *, *::before, *::after {
